samples/_failures_safe/1761004462_2e68a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77517441.c: In function ‘main’:
./samples/SAFE/__tmp_77517441.c:153:5: error: expected expression at end of input
  153 |     if (analyzer.word_count ==
      |     ^~
./samples/SAFE/__tmp_77517441.c:153:5: error: expected declaration or statement at end of input
